OpenHome/Net/Bindings/C/ControlPoint/CpService.h

/**
 * @addtogroup CpService
 * @ingroup ControlPoint
 * @{
 */

/**
 * Opaque handle to a service
 */
typedef THandle CpService;
/**
 * @addtogroup Argument
 * @ingroup CpService
 * @{
 */
/**
 * Opaque handle to an argument
 *
 * One Argument will be created per [in/out]put Parameter for the Action
 * Input parameters should construct arguments using the (Parameter, Val) constructor.
 * Output parameters should construct arguments using only the parameter and should
 * read the value when the invocation completes.
 */
typedef THandle ActionArgument;
/**
 * Create an integer input argument for an action
 *
 * Intended to be write only (its value is written on construction and not be later read)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateInt.  Defines the name plus any bounds to the value for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddInputParameter
 * @param[in] aValue      Value for the argument
 *
 * @return  Handle for the newly created integer type input argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateIntInput(ServiceParameter aParameter, int32_t aValue);
/**
 * Create an integer output argument for an action
 *
 * Intended to be created without any value.  The value is later set after CpServiceInvokeAction is called
 * but before the invocation's callback is run)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateInt.  Defines the name plus any bounds to the value for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddOutputParameter
 *
 * @return  Handle for the newly created integer type output argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateIntOutput(ServiceParameter aParameter);
/**
 * Create an unsigned integer input argument for an action
 *
 * Intended to be write only (its value is written on construction and not be later read)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateUint.  Defines the name plus any bounds to the value for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddInputParameter
 * @param[in] aValue      Value for the argument
 *
 * @return  Handle for the newly created unsigned integer type input argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateUintInput(ServiceParameter aParameter, uint32_t aValue);
/**
 * Create an unsigned integer output argument for an action
 *
 * Intended to be created without any value.  The value is later set after CpServiceInvokeAction is called
 * but before the invocation's callback is run)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateUint.  Defines the name plus any bounds to the value for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddOutputParameter
 *
 * @return  Handle for the newly created unsigned integer type output argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateUintOutput(ServiceParameter aParameter);
/**
 * Create a boolean input argument for an action
 *
 * Intended to be write only (its value is written on construction and not be later read)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateBool.  Defines the name for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddInputParameter
 * @param[in] aValue      Value for the argument
 *
 * @return  Handle for the newly created boolean type input argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateBoolInput(ServiceParameter aParameter, uint32_t aValue);
/**
 * Create a boolean output argument for an action
 *
 * Intended to be created without any value.  The value is later set after CpServiceInvokeAction is called
 * but before the invocation's callback is run)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateBool.  Defines the name for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddOutputParameter
 *
 * @return  Handle for the newly created boolean type output argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateBoolOutput(ServiceParameter aParameter);
/**
 * Create a string input argument for an action
 *
 * Intended to be write only (its value is written on construction and not be later read)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateString.  Defines the name plus any set of allowed values for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddInputParameter
 * @param[in] aValue      Value for the argument
 *
 * @return  Handle for the newly created string type input argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateStringInput(ServiceParameter aParameter, const char* aValue);
/**
 * Create a string output argument for an action
 *
 * Intended to be created without any value.  The value is later set after CpServiceInvokeAction is called
 * but before the invocation's callback is run)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateString.  Defines the name plus any set of allowed values for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddOutputParameter
 *
 * @return  Handle for the newly created string type output argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateStringOutput(ServiceParameter aParameter);
/**
 * Create a binary input argument for an action
 *
 * Intended to be write only (its value is written on construction and not be later read)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateBinary.  Defines the name for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddInputParameter
 * @param[in] aData       Value for the argument
 * @param[in] aLen        Length (in bytes) of aData
 *
 * @return  Handle for the newly created binary type input argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateBinaryInput(ServiceParameter aParameter, const uint8_t* aData, uint32_t aLen);
/**
 * Create a binary output argument for an action
 *
 * Intended to be created without any value.  The value is later set after CpServiceInvokeAction is called
 * but before the invocation's callback is run)
 *
 * @param[in] aParameter  Returned by ServiceParameterCreateBinary.  Defines the name for the argument.
 *                        Handle must have been previously added to the action using ServiceActionAddOutputParameter
 *
 * @return  Handle for the newly created boolean type output argument
 */
DllExport ActionArgument STDCALL ActionArgumentCreateBinaryOutput(ServiceParameter aParameter);
/**
 * Read the value of an integer argument.
 *
 * Only intended for use with output arguments inside the invocation completed callback.
 *
 * @param[in] aArgument  Returned by ActionArgumentCreateIntOutput
 *
 * @return  Current value of the argument
 */
DllExport int32_t STDCALL ActionArgumentValueInt(ActionArgument aArgument);
/**
 * Read the value of an unsigned integer argument.
 *
 * Only intended for use with output arguments inside the invocation completed callback.
 *
 * @param[in] aArgument  Returned by ActionArgumentCreateUintOutput
 *
 * @return  Current value of the argument
 */
DllExport uint32_t STDCALL ActionArgumentValueUint(ActionArgument aArgument);
/**
 * Read the value of a boolean argument.
 *
 * Only intended for use with output arguments inside the invocation completed callback.
 *
 * @param[in] aArgument  Returned by ActionArgumentCreateBoolOutput
 *
 * @return  Current value of the argument.  0 for false; non-zero for true
 */
DllExport uint32_t STDCALL ActionArgumentValueBool(ActionArgument aArgument);
/**
 * Read the value of a string argument.
 *
 * Only intended for use with output arguments inside the invocation completed callback.
 *
 * @param[in]  aArgument  Returned by ActionArgumentCreateStringOutput
 * @param[out] aData      Current value of the argument.  Ownership passes to the client.
 *                        Use OhNetFree() to later destroy it.
 * @param[out] aLen       Length (in bytes) of aData
 */
DllExport void STDCALL ActionArgumentGetValueString(ActionArgument aArgument, char** aData, uint32_t* aLen);
/**
 * Read the value of a binary argument.
 *
 * Only intended for use with output arguments inside the invocation completed callback.
 *
 * @param[in]  aArgument  Returned by ActionArgumentCreateBinaryOutput
 * @param[out] aData      Current value of the argument.  Ownership passes to the client.
 *                        Use OhNetFree() to later destroy it.
 * @param[out] aLen       Length (in bytes) of aData
 */
DllExport void STDCALL ActionArgumentGetValueBinary(ActionArgument aArgument, uint8_t** aData, uint32_t* aLen);