OpenHome/Net/Bindings/Cs/ControlPoint/CpService.cs

using System;
using System.Runtime.InteropServices;
using System.Text;
using OpenHome.Net.Core;
using System.Collections.Generic;
#if IOS
using ObjCRuntime;
#endif

namespace OpenHome.Net.ControlPoint
{
    /// <summary>
    /// (Action) Argument.  Only intended for use by auto-generated proxies.
    /// </summary>
    /// <remarks>One Argument will be created per [in/out]put Parameter for the Action.
    /// Input parameters should construct arguments using the (Parameter, Val) constructor.
    /// Output parameters should construct arguments using only the parameter and should
    /// read the value when the invocation completes.</remarks>
    public class Argument
    {
        protected IntPtr iHandle;

        internal IntPtr Handle()
        {
            return iHandle;
        }

        protected Argument()
        {
        }
    }

    /// <summary>
    /// Integer type argument.  Only intended for use by auto-generated proxies.
    /// </summary>
    public class ArgumentInt : Argument
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateIntInput(IntPtr aParameter, int aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateIntOutput(IntPtr aParameter);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern int ActionArgumentValueInt(IntPtr aHandle);

        /// <summary>
        /// Constructor for integer input argument for an action
        /// </summary>
        /// <remarks>Intended to be write only (its value is written on construction and not be later read)</remarks>
        /// <param name="aParameter">Defines the name plus any bounds to the value for the argument.
        /// Must have been previously added to the action using Action.AddInputParameter</param>
        /// <param name="aValue">Value for the argument</param>
        public ArgumentInt(ParameterInt aParameter, int aValue)
        {
            iHandle = ActionArgumentCreateIntInput(aParameter.Handle(), aValue);
        }

        /// <summary>
        /// Constructor for integer output argument for an action
        /// </summary>
        /// <remarks>Intended to be created without any value.  The value is later set after
        /// CpService.InvokeAction is called but before the invocation's callback is run)</remarks>
        /// <param name="aParameter">Defines the name plus any bounds to the value for the argument.
        /// Must have been previously added to the action using Action.AddOutputParameter</param>
        public ArgumentInt(ParameterInt aParameter)
        {
            iHandle = ActionArgumentCreateIntOutput(aParameter.Handle());
        }

        /// <summary>
        /// Read the value of an integer argument.
        /// </summary>
        /// <remarks>Only intended for use with output arguments inside the invocation completed callback.</remarks>
        /// <returns>Current value of the argument</returns>
        int Value()
        {
            return ActionArgumentValueInt(iHandle);
        }
    }

    /// <summary>
    /// Unsigned integer type argument.  Only intended for use by auto-generated proxies.
    /// </summary>
    public class ArgumentUint : Argument
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateUintInput(IntPtr aParameter, uint aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateUintOutput(IntPtr aParameter);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern uint ActionArgumentValueUint(IntPtr aHandle);

        /// <summary>
        /// Constructor for unsigned integer input argument for an action
        /// </summary>
        /// <remarks>Intended to be write only (its value is written on construction and not be later read)</remarks>
        /// <param name="aParameter">Defines the name plus any bounds to the value for the argument.
        /// Must have been previously added to the action using Action.AddInputParameter</param>
        /// <param name="aValue">Value for the argument</param>
        public ArgumentUint(ParameterUint aParameter, uint aValue)
        {
            iHandle = ActionArgumentCreateUintInput(aParameter.Handle(), aValue);
        }

        /// <summary>
        /// Constructor for unsigned integer output argument for an action
        /// </summary>
        /// <remarks>Intended to be created without any value.  The value is later set after
        /// CpService.InvokeAction is called but before the invocation's callback is run)</remarks>
        /// <param name="aParameter">Defines the name plus any bounds to the value for the argument.
        /// Must have been previously added to the action using Action.AddOutputParameter</param>
        public ArgumentUint(ParameterUint aParameter)
        {
            iHandle = ActionArgumentCreateUintOutput(aParameter.Handle());
        }

        /// <summary>
        /// Read the value of an unsigned integer argument.
        /// </summary>
        /// <remarks>Only intended for use with output arguments inside the invocation completed callback.</remarks>
        /// <returns>Current value of the argument</returns>
        uint Value()
        {
            return ActionArgumentValueUint(iHandle);
        }
    }

    /// <summary>
    /// Boolean type argument.  Only intended for use by auto-generated proxies.
    /// </summary>
    public class ArgumentBool : Argument
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateBoolInput(IntPtr aParameter, uint aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateBoolOutput(IntPtr aParameter);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern uint ActionArgumentValueBool(IntPtr aHandle);

        /// <summary>
        /// Constructor for boolean input argument for an action
        /// </summary>
        /// <remarks>Intended to be write only (its value is written on construction and not be later read)</remarks>
        /// <param name="aParameter">Defines the name for the argument.
        /// Must have been previously added to the action using Action.AddInputParameter</param>
        /// <param name="aValue">Value for the argument</param>
        public ArgumentBool(ParameterBool aParameter, bool aValue)
        {
            iHandle = ActionArgumentCreateBoolInput(aParameter.Handle(), (aValue? 1u : 0u));
        }

        /// <summary>
        /// Constructor for boolean output argument for an action
        /// </summary>
        /// <remarks>Intended to be created without any value.  The value is later set after
        /// CpService.InvokeAction is called but before the invocation's callback is run)</remarks>
        /// <param name="aParameter">Defines the name for the argument.
        /// Must have been previously added to the action using Action.AddOutputParameter</param>
        public ArgumentBool(ParameterBool aParameter)
        {
            iHandle = ActionArgumentCreateBoolOutput(aParameter.Handle());
        }

        /// <summary>
        /// Read the value of a boolean argument.
        /// </summary>
        /// <remarks>Only intended for use with output arguments inside the invocation completed callback.</remarks>
        /// <returns>Current value of the argument</returns>
        bool Value()
        {
            uint val = ActionArgumentValueBool(iHandle);
            return (val != 0);
        }
    }

    /// <summary>
    /// String type argument.  Only intended for use by auto-generated proxies.
    /// </summary>
    public class ArgumentString : Argument
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateStringInput(IntPtr aParameter, IntPtr aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateStringOutput(IntPtr aParameter);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void ActionArgumentGetValueString(IntPtr aHandle, out IntPtr aData, out uint aLen);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void OhNetFree(IntPtr aPtr);

        /// <summary>
        /// Constructor for string input argument for an action
        /// </summary>
        /// <remarks>Intended to be write only (its value is written on construction and not be later read)</remarks>
        /// <param name="aParameter">Defines the name plus any bounds to the value for the argument.
        /// Must have been previously added to the action using Action.AddInputParameter</param>
        /// <param name="aValue">Value for the argument</param>
        public ArgumentString(ParameterString aParameter, String aValue)
        {
            IntPtr value = InteropUtils.StringToHGlobalUtf8(aValue);
            iHandle = ActionArgumentCreateStringInput(aParameter.Handle(), value);
            Marshal.FreeHGlobal(value);
        }

        /// <summary>
        /// Constructor for string output argument for an action
        /// </summary>
        /// <remarks>Intended to be created without any value.  The value is later set after
        /// CpService.InvokeAction is called but before the invocation's callback is run)</remarks>
        /// <param name="aParameter">Defines the name plus any bounds to the value for the argument.
        /// Must have been previously added to the action using Action.AddOutputParameter</param>
        public ArgumentString(ParameterString aParameter)
        {
            iHandle = ActionArgumentCreateStringOutput(aParameter.Handle());
        }

        /// <summary>
        /// Read the value of a binary argument.
        /// </summary>
        /// <remarks>Only intended for use with output arguments inside the invocation completed callback.
        /// Can only be called once as the first call extracts the string data from the underlying native object</remarks>
        /// <returns>Current value of the argument</returns>
        String Value()
        {
            IntPtr ptr;
            uint len;
            ActionArgumentGetValueString(iHandle, out ptr, out len);
            String ret = InteropUtils.PtrToStringUtf8(ptr, len);
            OhNetFree(ptr);
            return ret;
        }
    }

    /// <summary>
    /// Binary type argument.  Only intended for use by auto-generated proxies.
    /// </summary>
    public class ArgumentBinary : Argument
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateBinaryInput(IntPtr aParameter, IntPtr aData, int aLength);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern IntPtr ActionArgumentCreateBinaryOutput(IntPtr aParameter);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void ActionArgumentGetValueBinary(IntPtr aHandle, out IntPtr aData, out uint aLen);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern void OhNetFree(IntPtr aPtr);
